--- a/mytest/CMakeLists.txt
+++ b/mytest/CMakeLists.txt
@@ -4,9 +4,13 @@ project(mytest)
 
 link_directories(${CMAKE_SOURCE_DIR}/lib)
 
-add_executable(add_binary add_binary_test.cc)
-target_link_libraries(add_binary daily "gtest" "gtest_main")
-add_test(NAME add_binary COMMAND add_binary)
+add_executable(three_sum_closest three_sum_closest_test.cc)
+target_link_libraries(three_sum_closest daily "gtest" "gtest_main")
+add_test(NAME three_sum_closest COMMAND three_sum_closest)
+
+# add_executable(add_binary add_binary_test.cc)
+# target_link_libraries(add_binary daily "gtest" "gtest_main")
+# add_test(NAME add_binary COMMAND add_binary)
 
 # add_executable(pattern_matching pattern_matching_test.cc)
 # target_link_libraries(pattern_matching daily "gtest" "gtest_main")
