--- a/mytest/CMakeLists.txt
+++ b/mytest/CMakeLists.txt
@@ -4,9 +4,13 @@ project(mytest)
 
 link_directories(${CMAKE_SOURCE_DIR}/lib)
 
-add_executable(word_break word_break_test.cc)
-target_link_libraries(word_break daily "gtest" "gtest_main")
-add_test(NAME word_break COMMAND word_break)
+add_executable(remove_duplicate remove_duplicate_node_test.cc)
+target_link_libraries(remove_duplicate daily "gtest" "gtest_main")
+add_test(NAME remove_duplicate COMMAND remove_duplicate)
+
+# add_executable(word_break word_break_test.cc)
+# target_link_libraries(word_break daily "gtest" "gtest_main")
+# add_test(NAME word_break COMMAND word_break)
 
 # add_executable(three_sum_closest three_sum_closest_test.cc)
 # target_link_libraries(three_sum_closest daily "gtest" "gtest_main")
