--- a/weekly/CMakeLists.txt
+++ b/weekly/CMakeLists.txt
@@ -2,4 +2,6 @@ cmake_minimum_required(VERSION 3.10)
 
 project(weekly)
 
-add_library(weekly 194/making_filenames_uni.cc)
+add_library(weekly src/making_filenames_uni.cc
+                   src/can_make_arithmetic_progression.cc
+                   src/get_last_moment.cc)
