--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -14,4 +14,4 @@ add_subdirectory(util)
 add_subdirectory(mytest)
 add_subdirectory(weekly)
 
-# add_executable(main main.cpp)
+add_executable(main main.cpp)
