--- a/mytest/CMakeLists.txt
+++ b/mytest/CMakeLists.txt
@@ -4,9 +4,13 @@ project(mytest)
 
 link_directories(${CMAKE_SOURCE_DIR}/lib)
 
-add_executable(path_sum path_sum_test.cc)
-target_link_libraries(path_sum daily weekly "gtest" "gtest_main")
-add_test(NAME path_sum COMMAND path_sum)
+# add_executable(sap sap_test.cc)
+# target_link_libraries(sap daily weekly "gtest" "gtest_main")
+# add_test(NAME sap COMMAND sap)
+
+# add_executable(path_sum path_sum_test.cc)
+# target_link_libraries(path_sum daily weekly "gtest" "gtest_main")
+# add_test(NAME path_sum COMMAND path_sum)
 
 # add_executable(treenode_test treenode_test.cc)
 # target_link_libraries(treenode_test daily weekly "gtest" "gtest_main")
